--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.6.0",
     "mixitup": "^3.3.1",
-    "sass": "^1.43.5"
-  },
-  "dependencies": {
+    "sass": "^1.43.5",
     "slick-carousel": "^1.8.1"
   }
 }
